--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -1,3 +1,19 @@
+.acd-icon-bolt::before {
+    content: "\E945";
+}
+
+.acd-icon-addColumn::before {
+    content: "\F1D6";
+}
+
+.acd-icon-remove::before {
+    content: "\E711";
+}
+
+.acd-icon-drag::before {
+    content: "\E7C2";
+}
+
 .acd-designersurface {
     outline: none;
 }
@@ -8,15 +24,14 @@
 
 .acd-designersurface.dragging > .acd-peer:hover {
     background-color: transparent;
+    border-color: transparent;
 }
 
-.acd-removeButton {
-    width: 16px;
-    height: 16px;
-    border-radius: 8px;
-    background-color: lime;
+.acd-peerButton {
+    width: 20px;
+    height: 20px;
     font-family: 'FabricMDL2Icons';
-    font-size: 8px;
+    font-size: 14px;
     font-weight: bold;
     font-style: normal;
     font-weight: normal;
@@ -27,29 +42,22 @@
     color: red;
     background-color: white;
     cursor: default;
+    user-select: none;
 }
 
-.acd-icon-bolt::before {
-    content: "\E945";
+.acd-circularButton {
+    border-radius: 50%;
 }
 
-.acd-icon-addColumn::before {
-    content: "\F1D6";
-}
-
-.acd-removeButton:hover {
+.acd-peerButton:hover {
     background-color: red;
     color: white;
 }
 
-.acd-removeButton:active {
+.acd-peerButton:active {
     background-color: firebrick;
     border: 1px solid firebrick;
     color: white;
-}
-
-.acd-removeButton::before {
-    content: "\E8BB";
 }
 
 .acd-palette-item {
@@ -77,7 +85,7 @@
 }
 
 .acd-peer.dragover {
-    border: 1px dashed green;
+    border: 1px dashed green !important;
 }
 
 .acd-peer.dragover:hover {
@@ -97,35 +105,4 @@
 
 .acd-separation.selected {
     background-color: rgba(255, 0, 0, 0.2);
-}
-
-.acd-peer-command {
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    margin: 0;
-    border: none;
-    font-family: 'FabricMDL2Icons';
-    font-size: 10px;
-    font-weight: bold;
-    font-style: normal;
-    font-weight: normal;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border: 1px solid red;
-    color: red;
-    cursor: default;
-}
-
-.acd-peer-command:hover {
-    background-color: red;
-    color: white;
-}
-
-.acd-peer-command:active {
-    border: 1px solid firebrick;
-    background-color: firebrick;
-    color: white;
 }
