--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -116,19 +116,28 @@
 
 .treeview {
     background-color: #f9f9f9;
-    height: calc(100% - 25px);
-    padding-top: 30px;
+    height: calc(100% - 25px);    
+    padding: 30px 0px 5px 0px;
 }
 
 .treeview__container {
     list-style: none;
     margin: 0;
     padding-left: 0;
+    width: 100%;
 }
 
 .treeview__element{
     display: flex;
     align-items: center;
+    width: 100%;
+}
+
+.is-folded {
+    display: none;
+}
+
+.treeview__element:not(:last-child){
     margin-bottom: 5px;
 }
 
@@ -145,4 +154,8 @@
  height: 12px;
  margin-right: 8px;
  background-color: red;
+}
+
+.treeview__icon--arrow {
+    background-color: orange;
 }
