--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -30,7 +30,7 @@
 .acd-peerButton {
     width: 20px;
     height: 20px;
-    font-family: 'FabricMDL2Icons';
+    font-family: "FabricMDL2Icons";
     font-size: 14px;
     font-weight: bold;
     font-style: normal;
@@ -61,7 +61,7 @@
 }
 
 .acd-palette-item {
-    border: 1px solid #CCCCCC;
+    border: 1px solid #cccccc;
     padding: 8px;
     margin-bottom: 4px;
     background-color: white;
@@ -69,7 +69,7 @@
 }
 
 .acd-palette-item:hover {
-    background-color: #EEEEEE;
+    background-color: #eeeeee;
 }
 
 .acd-peer {
@@ -116,7 +116,7 @@
 
 .treeview {
     background-color: #f9f9f9;
-    height: calc(100% - 25px);    
+    height: calc(100% - 25px);
     padding: 30px 0px 5px 0px;
 }
 
@@ -127,21 +127,17 @@
     width: 100%;
 }
 
-.treeview__element{
+.treeview__element {
     display: flex;
     align-items: center;
     width: 100%;
 }
 
-.is-folded {
-    display: none;
-}
-
-.treeview__element:not(:last-child){
+.treeview__element:not(:last-child) {
     margin-bottom: 5px;
 }
 
-.treeview__element:hover{
+.treeview__element:hover {
     cursor: pointer;
 }
 
@@ -150,12 +146,32 @@
 }
 
 .treeview__icon {
- width: 12px;
- height: 12px;
- margin-right: 8px;
- background-color: red;
+    width: 12px;
+    height: 12px;
+    margin-right: 8px;
+    background-color: red;
 }
 
 .treeview__icon--arrow {
-    background-color: orange;
+    background-color: transparent;
+    background-image: url("/assets/arrow.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    margin-right: 4px;
+    height: 12px;
+    width: 12px;
+}
+
+.treeview__icon--arrow.is-rotated {
+    background-image: url("/assets/arrow-rotated.png");
+}
+
+.btn {
+    border: none;
+    padding: 0;
+}
+
+.is-folded {
+    display: none;
 }
