--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -172,13 +172,20 @@
     display: flex;
     font-size: 14px;
     font-weight: 600;
+    list-style-type: none;
+    margin-bottom: 6px;
     position: relative;
     white-space: nowrap;
   }
 
+.aside-title:not(:first-of-type) {
+    margin-top: 12px;
+}
+
 .aside-title::after {
-    border-bottom: 1px solid #cccccc;
+    border-bottom: 1px solid #e0e0e0;
     content: '';
+    margin-bottom: -3px;
     margin-left: 8px;
     width: 100%;
   }
