--- a/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
+++ b/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
@@ -35,6 +35,14 @@ a.default-ac-anchor:visited:active {
     padding-right: 20px;
 }
 
+.default-ac-container:first-child {
+    padding-right: 0 !important; /* The important overrides inline CSS properties added via JS */
+}
+
+.default-ac-container + div {
+    display: none !important; /* The important overrides inline CSS properties added via JS */
+}
+
 .default-ac-container.default-ac-selectable,
 .default-ac-columnSet.default-ac-selectable {
     padding: 0;
@@ -119,6 +127,8 @@ a.default-ac-anchor:visited:active {
     font-family: "Segoe UI", sans-serif;
     font-size: 14px;
     color: black;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .default-ac-input.default-ac-textInput {
@@ -129,11 +139,18 @@ a.default-ac-anchor:visited:active {
     height: 72px;
 }
 
-.default-ac-input.default-ac-textInput, .default-ac-input.default-ac-numberInput, .default-ac-input.default-ac-dateInput, .default-ac-input.default-ac-timeInput {
+.default-ac-input.default-ac-textInput,
+.default-ac-input.default-ac-numberInput,
+.default-ac-input.default-ac-dateInput,
+.default-ac-input.default-ac-timeInput {
     height: 31px;
 }
 
-.default-ac-input.default-ac-textInput, .default-ac-input.default-ac-numberInput, .default-ac-input.default-ac-dateInput, .default-ac-input.default-ac-timeInput, .default-ac-input.default-ac-multichoiceInput {
+.default-ac-input.default-ac-textInput,
+.default-ac-input.default-ac-numberInput,
+.default-ac-input.default-ac-dateInput,
+.default-ac-input.default-ac-timeInput,
+.default-ac-input.default-ac-multichoiceInput {
     border: 1px solid #DDDDDD;
     padding: 4px 8px 4px 8px;
 }
