--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -191,6 +191,10 @@
     width: 30px !important; /* The important overrides inline CSS properties added via JS */
 }
 
+.default-ac-container:last-of-type {
+    padding-left: 6px;
+}
+
 .is-hidden {
     display: none;
 }
