Optimized images and added timeline container (#21)

--- a/source/nodejs/adaptivecards-visualizer/css/timeline.css
+++ b/source/nodejs/adaptivecards-visualizer/css/timeline.css
@@ -9,3 +9,8 @@
   padding-left: 48px;
   padding-top: 158px;
 }
+
+/* .timeline-card > div {
+    max-width: 328px !important;
+    max-height: 178px !important;
+} */
