Fix/history review (#26)
* Changed navbar text

* Added JSON Title

* Added icon when fullscreen

* Removed unnecesary sanitizeName functionality

--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -376,6 +376,10 @@
     content: url("/assets/icons/fullscreen.svg");
 }
 
+.toolbar-btn__icon-fullscreen.is-fullscreen::before {
+    content: url("/assets/icons/exitfullscreen.svg");
+}
+
 
 
 /*
