--- a/source/nodejs/adaptivecards-designer/css/app.css
+++ b/source/nodejs/adaptivecards-designer/css/app.css
@@ -11,3 +11,15 @@ body {
     padding: 0;
     overflow: hidden;
 }
+
+.jsonEditorHost-title {
+    background-color: #d8d8d8;
+    border: solid 1px #cccccc;
+    color: #000000;
+    font-size: 14px;
+    height: 30px;
+    line-height: 30px;
+    margin-bottom: 12px;
+    padding-left: 12px;
+    width: 100%;
+}
